# chip-8

./: .gitignore  CMakeLists.txt
src/: chip-8.c  chip-8.h  main.c  sdl.c  sdl.h
